# ESP32-RLCD-Clock

./: .gitignore  README.md  rlcd_time_scale_monitor_implementation_notes.md
host/: CMakeLists.txt  README.md
host/src/: main.c  render_faces.c  render_faces.h  sdl3_backend.c  sdl3_backend.h  time_model.c  time_model.h
host/tests/: test_time_model.c
